--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div class="main">
-                <p id="p1">Create Password</p>
+                <p id="p1">RÜZGAR ENAYİSİNİN ŞİFRESİNİ BULMA SİTESİ</p>
                 <p id="p2">Press the 'Generate' button for a Safe and Strong Password.</p>
                 <p id="generated"></p>
                 <div class="generate">
