--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Create Save Password!</title>
+        <title>Password Creater</title>
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div class="container">
             <div class="main">
-                <p id="p1">RÜZGAR ENAYİSİNİN ŞİFRESİNİ BULMA SİTESİ</p>
+                <p id="p1">Create Password</p>
                 <p id="p2">Press the 'Generate' button for a Safe and Strong Password.</p>
                 <p id="generated"></p>
                 <div class="generate">
